<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="#2E2D29">

    <ImageView
            android:layout_width="283dp"
            android:layout_height="280dp" tools:srcCompat="@drawable/avatar_2"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="435dp" android:visibility="visible" tools:visibility="visible"
            android:contentDescription="@string/image" style="@style/Platform.MaterialComponents"
            android:theme="@style/Platform.MaterialComponents" app:srcCompat="@drawable/avatar_2"
            tools:ignore="VectorDrawableCompat"/>
    <Button
            android:text="@string/select_image"
            android:layout_width="236dp"
            android:layout_height="44dp" android:id="@+id/button4"
            style="@style/TextAppearance.AppCompat.Button"
            android:background="@drawable/rounded_corners_yellow" app:backgroundTint="@android:color/holo_orange_dark"
            app:icon="@drawable/rounded_corners_yellow" app:iconTint="@android:color/holo_orange_dark"
            tools:text="Select Image" android:textColor="#000000" android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="87dp" android:layout_marginStart="87dp" android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="384dp"
            android:hapticFeedbackEnabled="false" android:clickable="true" android:focusable="true"/>
    <Button
            android:text="@string/upload"
            android:layout_width="103dp"
            android:layout_height="42dp" android:id="@+id/button6"
            style="@style/TextAppearance.AppCompat.Button"
            android:background="@drawable/rounded_corners_yellow" app:backgroundTint="@android:color/holo_orange_dark"
            app:icon="@drawable/rounded_corners_yellow" app:iconTint="@android:color/holo_orange_dark"
            tools:text="Upload" android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="154dp" android:layout_marginStart="154dp" android:layout_marginEnd="154dp"
            android:layout_marginRight="154dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="79dp"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"/>
    <EditText
            android:layout_width="384dp"
            android:layout_height="41dp"
            android:inputType="phone"
            android:ems="10"
            android:maxLength="11"
            android:hint="@string/phone"
            android:id="@+id/editTextPhone" android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            android:layout_marginEnd="15dp" android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            android:textColor="#FF9800" android:textColorHint="@android:color/holo_orange_dark"
            android:visibility="visible" tools:visibility="visible" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="13dp" android:layout_marginStart="13dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"/>
    <EditText
            android:layout_width="384dp"
            android:layout_height="46dp"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editTextTextPostalAddress"
            android:hint="@string/location"
            android:autofillHints="" android:textColor="#FF9800"
            android:textColorHint="@android:color/holo_orange_dark"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="13dp" android:layout_marginStart="13dp" android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintBottom_toTopOf="@+id/button6"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="384dp"
            android:layout_height="104dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="13dp" android:layout_marginStart="13dp" android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPostalAddress" android:id="@+id/textInputLayout"
            android:textColorHint="@android:color/holo_orange_dark">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:hint="@string/description" android:visibility="visible" tools:visibility="visible"
                android:textColor="@android:color/holo_orange_dark"
                android:textColorHint="@android:color/holo_orange_dark" android:id="@+id/descText"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>